--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <url>http://maven.apache.org</url>
   <modules>
     <module>1.two-sum</module>
+    <module>9.palindrome-number</module>
   </modules>
 
   <properties>
