--- a/pom.xml
+++ b/pom.xml
@@ -1,40 +1,40 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.zervlad</groupId>
-  <artifactId>java-leetcode</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
+    <groupId>com.zervlad</groupId>
+    <artifactId>java-leetcode</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-  <name>java-leetcode</name>
-  <url>http://maven.apache.org</url>
-  <modules>
-    <module>1.two-sum</module>
-    <module>9.palindrome-number</module>
-    <module>13.roman-to-integer</module>
-      <module>14.longest-common-prefix</module>
-      <module>20.valid-parentheses</module>
-      <module>21.merge-two-sorted-lists</module>
-      <module>26.remove-duplicates-from-sorted-array</module>
-    <module>26.remove-duplicates-from-sorted-array/README.md</module>
-  </modules>
+    <name>java-leetcode</name>
+    <url>http://maven.apache.org</url>
+    <modules>
+        <module>1.two-sum</module>
+        <module>9.palindrome-number</module>
+        <module>13.roman-to-integer</module>
+        <module>14.longest-common-prefix</module>
+        <module>20.valid-parentheses</module>
+        <module>21.merge-two-sorted-lists</module>
+        <module>26.remove-duplicates-from-sorted-array</module>
+        <module>27.remove-element</module>
+    </modules>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.32</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.2</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
