58.length-of-last-word (easy)

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>27.remove-element</module>
         <module>28.find-the-index-of-the-first-occurrence-in-a-string</module>
         <module>35.search-insert-position</module>
+        <module>58.length-of-last-word</module>
     </modules>
 
     <properties>
