--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>66.plus-one</module>
         <module>67.add-binary</module>
         <module>69.sqrt-x</module>
+        <module>2.add-two-numbers</module>
     </modules>
 
     <properties>
