--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>67.add-binary</module>
         <module>69.sqrt-x</module>
         <module>2.add-two-numbers</module>
+        <module>70.climbing-stairs</module>
     </modules>
 
     <properties>
