--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>69.sqrt-x</module>
         <module>2.add-two-numbers</module>
         <module>70.climbing-stairs</module>
+        <module>71.simplify-path</module>
     </modules>
 
     <properties>
